add_library(imgui STATIC
            imgui.cpp       
            imgui_draw.cpp    
            imgui_widgets.cpp  
            imstb_truetype.h
            imgui.h         
            imgui_internal.h  
            imstb_rectpack.h         
            imconfig.h  
            imgui_demo.cpp  
            imgui_tables.cpp  
            imstb_textedit.h
            imgui_impl_glfw.h
            imgui_impl_glfw.cpp
            imgui_impl_opengl3.h
            imgui_impl_opengl3_loader.h
            imgui_impl_opengl3.cpp)